<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.zkoss.zest</groupId>
	<artifactId>zest</artifactId>
	<packaging>jar</packaging>
	<version>1.2.0</version>
	<name>ZK RESTful Framework</name>
	<url>http://www.zkoss.org/zest</url>
	<description>ZK RESTful Framework</description>
	<licenses>
		<license>
			<name>GNU LESSER GENERAL PUBLIC LICENSE, Version 3</name>
			<url>http://www.gnu.org/licenses/lgpl.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<scm>
		<url>http://zest.googlecode.com/svn/releases/1.2.0/zest</url>
	</scm>
	<repositories>
		<repository>
			<id>zk repository</id>
			<url>https://mavensync.zkoss.org/maven2</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>zkmaven</id>
			<name>ZK Maven Plugin Repository</name>
			<url>https://mavensync.zkoss.org/maven2</url>
		</pluginRepository>
		<pluginRepository>
			<releases>
				<enabled>false</enabled>
			</releases>
			<id>snapshots</id>
			<name>Maven Central Plugins Development Repository</name>
			<url>http://snapshots.maven.codehaus.org/maven2</url>
		</pluginRepository>
		<pluginRepository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>central</id>
			<name>Maven Plugin Repository</name>
			<url>http://repo1.maven.org/maven2</url>
		</pluginRepository>
	</pluginRepositories>
	<dependencies>
		<dependency>
			<groupId>org.zkoss.common</groupId>
			<artifactId>zweb</artifactId>
			<version>9.6.0</version>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.3</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.5</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-jdk14</artifactId>
			<version>1.7.5</version>
			<scope>runtime</scope>
		</dependency>
	</dependencies>
	<build>
		<directory>${project.basedir}/debug</directory>
		<outputDirectory>${project.basedir}/debug/classes</outputDirectory>
		<finalName>${project.artifactId}-${project.version}</finalName>
		<testOutputDirectory>${project.build.directory}/test-classes</testOutputDirectory>
		<sourceDirectory>${project.basedir}/src/</sourceDirectory>
		<resources>
			<resource>
				<directory>${project.basedir}/src/archive</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.zkoss.maven</groupId>
				<artifactId>yuicompressor-maven-plugin-zk</artifactId>
				<version>1.1.4</version>
				<executions>
					<execution>
						<goals>
							<goal>compress</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>8</source>
					<target>8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project> 
